# bayan

./: CMakeLists.txt  FileCollector.h  FileDuplicatesSearher.h  FileInfo.h  Hashing.cpp  Hashing.h  Readme.md  main.cpp
.github/workflows/: release.yml
